--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.1.6",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "style-loader": "^4.0.0",
